# basel-capital-engine

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py  models.py  services.py
app/: dashboard.py
docs/: technical_guide.md
examples/: integrated_analysis.py
notebooks/: 01_basic_usage.ipynb  02_advanced_calculations.ipynb  03_stress_testing.ipynb  04_validation_studies.ipynb
src/basileia/: __init__.py  config.yaml
src/basileia/accounting/: __init__.py  ifrs9.py  provisions.py
src/basileia/core/: __init__.py  buffers.py  capital.py  config.py  engine.py  exposure.py
src/basileia/icaap/: __init__.py  capital_planning.py  pillar2.py  processor.py
src/basileia/liquidity/: __init__.py  gap_analysis.py  lcr.py  nsfr.py  stress.py
src/basileia/metrics/: __init__.py  ratios.py
src/basileia/reporting/: __init__.py  corep.py  finrep.py  srep.py  validator.py
src/basileia/rwa/: __init__.py  credit.py  market.py  operational.py
src/basileia/simulator/: __init__.py  portfolio.py
src/basileia/stress/: __init__.py  engine.py  scenarios.py
tests/: __init__.py  conftest.py  test_core.py  test_properties.py  test_rwa.py
